Small config changes

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-minimal-example",
   "version": "1.0.0",
   "description": "My test",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "UNLICENSED",
